# HW7

./: .env.example  .gitignore  CLAUDE.md  HW7_asiroli2025_evenodd_league.docx  README.md  TESTING_GUIDE.md  agents_and_skills.md  create_hw7_submission_docx.py  demo_mcp_game.py  pyproject.toml  requirements.txt  self-assesment-guid.md  software_submission_guidelines.md
.claude/agents/: academic-self-assessor.md  building-block-designer.md  code-quality-auditor.md  documentation-architect.md  parallel-processing-optimizer.md  python-package-organizer.md  research-analyst.md  security-config-guardian.md  test-suite-manager.md
assets/diagrams/: .gitkeep
assets/images/: .gitkeep
assignment/: Chapter_1.md  Chapter_10.md  Chapter_11.md  Chapter_12.md  Chapter_2.md  Chapter_3.md  Chapter_4.md  Chapter_5.md  Chapter_6.md  Chapter_7.md  Chapter_8.md  Chapter_9.md  Unified_Assignment.md
config/: config.yaml
docs/: ARCHITECTURE.md  PRD.md  PROMPTS_BOOK.md
docs/api/: .gitkeep
docs/architecture/: .gitkeep
docs/guides/: .gitkeep
notebooks/: analysis.ipynb  analysis_executed.ipynb
results/: EXPERIMENTAL_RESULTS_SUMMARY.md
results/experiments/: experiment_hybrid_100matches_20260103_120500.json  experiment_llm_100matches_20260103_121000.json  experiment_random_100matches_20260103_120000.json
results/visualizations/: .gitkeep
src/my_project/: __init__.py
src/my_project/agents/: __init__.py
src/my_project/agents/player/: __init__.py  handlers.py  main.py  server.py  state.py  strategy.py
src/my_project/config/: __init__.py  settings.py
src/my_project/core/: __init__.py  protocol.py  registration.py
src/my_project/experiments/: __init__.py  parameter_exploration.py
src/my_project/utils/: __init__.py  console.py  logger.py  timestamp.py
tests/: TEST_COVERAGE_REPORT.md  __init__.py
tests/integration/: __init__.py  test_server.py
tests/unit/: test_example.py  test_handlers.py  test_logger.py  test_protocol.py  test_registration.py  test_simple_coverage.py  test_state.py  test_strategy.py  test_strategy_advanced.py  test_timestamp.py
