# pyproject.toml - Python Package Configuration
# This file defines your project as a proper Python package

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"  # TODO: Change to your project name
version = "0.1.0"
description = "LLMs and Agents Course - Homework 7"  # TODO: Update description
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}  # TODO: Update author info
]
keywords = ["llm", "agents", "ai", "machine-learning"]  # TODO: Update keywords

# Dependencies
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    # TODO: Add your project dependencies here
    # Example:
    # "openai>=1.0.0",
    # "anthropic>=0.3.0",
    # "torch>=2.0.0",
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/my_project"  # TODO: Update URL
Documentation = "https://github.com/yourusername/my_project/docs"  # TODO: Update URL
Repository = "https://github.com/yourusername/my_project"  # TODO: Update URL

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
